[package]
name = "AdventOfCode23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20", features = [] }
env_logger = { version = "0.10.1", features = [] }
regex = "1.10.2"
num-integer = "0.1.45"
